--- a/multithread.vcxproj
+++ b/multithread.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathUtils.cpp" />
     <ClCompile Include="PoolWorkerThread.cpp" />
+    <ClCompile Include="Semaphores.cpp" />
     <ClCompile Include="StreamAssetLoader.cpp" />
     <ClCompile Include="StringUtils.cpp" />
     <ClCompile Include="testRun.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="IWorkerAction.h" />
     <ClInclude Include="MathUtils.h" />
     <ClInclude Include="PoolWorkerThread.h" />
+    <ClInclude Include="Semaphores.h" />
     <ClInclude Include="StreamAssetLoader.h" />
     <ClInclude Include="StringUtils.h" />
     <ClInclude Include="testRun.h" />
