--- a/multithread.vcxproj.filters
+++ b/multithread.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="PoolWorkerThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Semaphores.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MathUtils.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PoolWorkerThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Semaphores.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
